--- a/index.html
+++ b/index.html
@@ -29,50 +29,74 @@
                 </ul>
             </div>
         </div>
-        <div class="header">
-            <div class="search-bar">
-                <input type="text" placeholder="search">
-                <input type="image" src="icons/magnify.png">
-            </div>
-            <div class="user-alerts">
-                <input type="image" src="icons/bell-circle-outline.png">
-                <input type="image" src="sprites/mrputtydance.gif" class="user-pic">
-                <p>Pepe Morelos</p>
-            </div>
-            <div class="user-info">
-                <img src="sprites/mrputtydance.gif" alt="profile-pic" class="user-pic">
-                <p>Hi there, Pepe Morelos (@pepemo)</p>
-            </div>
-            <div class="buttons">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
-        </div>
+
         <div class="main-content">
             <div class="projects">
                 <h3>Your Projects</h3>
                 <div class="cards">
                     <div class="card">
-                        <h5>Some fake project</h5>
+                        <div class="card-text">
+                            <h5>Some fake project</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                     <div class="card">
-                        <h5>Super Cool Project</h5>
+                        <div class="card-text">
+                            <h5>Super Cool Project</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                     <div class="card">
-                        <h5>Something Something</h5>
+                        <div class="card-text">
+                            <h5>Something Something</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                     <div class="card">
-                        <h5>ASJIOSJOIS</h5>
+                        <div class="card-text">
+                            <h5>ASJIOSJOIS</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                     <div class="card">
-                        <h5>Monkey Maker</h5>
+                        <div class="card-text">
+                            <h5>Monkey Maker</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                     <div class="card">
-                        <h5>Wat is this</h5>
+                        <div class="card-text">
+                            <h5>Wat is this</h5>
+                            <p>Bla bla something something laskdoapsdwopi dajksd sda da wokwdaowiod dwakdwo dwao dwa owdautut wiru spait. Posiouadi wr a r alajdklsa.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="icons/star-plus-outline.png" alt="">
+                            <img src="icons/eye-plus.png">
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="announcements">
                 <h3>Announcements</h3>
                 <div class="box" id="notice-board">
@@ -95,6 +119,32 @@
                     <p>some user</p>
                     <p>some user</p>
                 </div>
+            </div>
+        </div>
+        <div class="header">
+            <div class="search-bar">
+                <input type="text" placeholder="search">
+                <input type="image" src="icons/magnify.png">
+            </div>
+            <div class="user-alerts">
+                <input type="image" src="icons/bell-circle-outline.png" class="bell">
+                <input type="image" src="sprites/mrputtydance.gif" class="user-pic">
+                <p class="username">Pepe Morelos</p>
+            </div>
+            <div class="user-info">
+                <div class="user-image">
+                    <img src="sprites/mrputtydance.gif" alt="profile-pic" class="user-pic">
+                </div>
+
+                <div>
+                    <p>Hi there,</p>
+                    <p class="username">Pepe Morelos (@pepemo)</p>
+                </div>
+            </div>
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
     </div>
